--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -8,34 +8,19 @@ on:
 jobs:
   ping-supabase:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Ping Supabase (UPSERT)
+      - name: Ping Supabase avec écriture
         run: |
-          curl -X PATCH "https://bdblrcbyobsgfnlkguzj.supabase.co/rest/v1/heartbeat?id=eq.1" \
+          curl -X POST "https://bdblrcbyobsgfnlkguzj.supabase.co/rest/v1/heartbeat" \
             -H "apikey: ${{ secrets.SUPABASE_KEY }}" \
             -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY }}" \
             -H "Content-Type: application/json" \
             -H "Prefer: return=minimal" \
-            -d "{\"timestamp\": \"$(date -u +%Y-%m-%dT%H:%M:%SZ)\", \"source\": \"github-actions\"}"
-```
+            -d "{\"source\": \"github-actions\"}"
 
-### 3️⃣ Tester immédiatement
-
-Dans GitHub → **Actions** → Sélectionnez "Keep Supabase Active" → **Run workflow**
-
-Vérifiez que ça fonctionne ✅
-
-### 4️⃣ Vérifier dans Supabase
-
-Retournez dans Supabase → **Table Editor** → Table `heartbeat`
-
-Vous devriez voir **1 seule ligne** avec le timestamp mis à jour !
-
----
-
-## ⚠️ IMPORTANT
-
-Si vous **ne créez pas la table d'abord**, le workflow va échouer avec une erreur genre :
-```
-relation "public.heartbeat" does not exist
+      - name: Lecture de vérification
+        run: |
+          curl -X GET "https://bdblrcbyobsgfnlkguzj.supabase.co/rest/v1/heartbeat?select=id,timestamp,source&limit=5&order=timestamp.desc" \
+            -H "apikey: ${{ secrets.SUPABASE_KEY }}" \
+            -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY }}"
